# syrmia_internship

./: README.md
src/: BUILD  BUILD.bazel  WORKSPACE  build_tests_csv.sh  build_tests_report.sh  csv_template.conf  generate_graph.sh  main.cpp  main_simplified_graph.in  run.sh  run_gdb.sh  run_sca.sh  run_test.sh  srs.csv  start_elasticsearch.sh  start_kibana.sh  start_logstash.sh  suppressions.txt
src/asan_test/: example2.cpp  example5.cpp  test.out
src/bug_detection/asan/: example1.cpp  example4.cpp  example6.cpp  example7.cpp  run_asan.sh
src/bug_detection/gdb/: example1.cpp  run_gdb.sh
src/bug_detection/sca/: run_sca.sh
src/lib/: BUILD  BUILD.bazel  arithmetics.cpp  arithmetics.hpp
src/lib/tests/: arithmetics_test.cpp
src/rules/: test_extractor.bzl  test_report.bzl
src/test_parser/: BUILD.bazel  test_parser.py
