load("//:rules/test_report.bzl", "test_report")
load("//:rules/test_extractor.bzl", "test_extractor")

cc_library(
    name = "arithmetics",
    srcs = ["arithmetics.cpp"],
    hdrs = ["arithmetics.hpp"],
    visibility = ["//visibility:public"],
)

cc_test(
  name = "arithmetics_test",
  size = "small",
  srcs = ["tests/arithmetics_test.cpp"],
  deps = ["@com_google_googletest//:gtest_main",
          ":arithmetics"],
)

test_report(
  name = "arithmetics_test_report",
  test = "//lib:arithmetics_test",
  testonly = True
)

test_extractor(
  name = "tests_csv",
  report = "//lib:arithmetics_test_report",
  source = "tests/arithmetics_test.cpp",
  extraction_tool = "//test_parser:test_parser",
  testonly = True
)
